--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Tvoj Psihoterapeut - Suzana Mojsilović",
   "short_name": "Tvoj Psihoterapeut",
-  "description": "Gestalt i Shema psihoterapija sa licenciranim psihoterapeutom Suzana Mojsilović u Novom Pazaru. Online i uživo sesije.",
+  "description": "Gestalt i Shema psihoterapija sa licenciranim psihoterapeutom Suzana Mojsilović u Novom Pazaru. Online i uživo seanse.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
