Fix static file serving for AI/LLM files
- Updated vercel.json to exclude static files from SPA routing
- Updated _redirects to allow direct access to AI files
- Fixed llms.txt, ai.txt, humans.txt, schema.json serving
- Now static files will be served directly instead of redirecting to index.html

--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "framework": "vite",
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/((?!ai\\.txt|llms\\.txt|humans\\.txt|schema\\.json|robots\\.txt|sitemap\\.xml|manifest\\.json|_redirects|.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot)).*)",
       "destination": "/index.html"
     }
   ]
